appId: host.exp.Exponent
name: "Toggle todo completion"
tags:
  - smoke
---
- runFlow: _launch.yaml
- assertVisible: "To do"
- tapOn:
    id: "todo-toggle"
    index: 0
- assertVisible: "Completed"
- tapOn:
    id: "todo-toggle"
    index: 0
- assertVisible: "To do"
